Migrate to JUnit 5 (closes #158)